--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nataliiacat.github.io/Hydra",
+  "homepage": "http://nataliiacat.github.io/Hydra",
   "name": "hydra",
   "private": true,
   "version": "0.0.0",
